bio spacing fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,36 +173,43 @@ body {
 
 }
 
+header {
+	display: flex;
+}
 
 .nav-flex {
-	/*	display: grid;*/
+	display: flex;
+	flex-direction: row;
 	font-family: 'Zilla Slab', serif;
 	font-size: 2.6rem;
 	font-weight: 500;
 	height: 6rem;
-	/*	grid-template-columns: 1fr 1fr 1fr 1fr;*/
 	line-height: 3.7rem;
 	text-transform: uppercase;
 	text-align: center;
-	display: flex;
-	flex-direction: row;
 	width: 100%;
-	justify-content: space-between;
+	justify-content: flex-end;
+
 
 }
 
 .nav-logo {
-	margin-left: 2%
+	padding-left: 2%;
 }
 
 .nav-contact {
-	margin-left: 40%
+	margin-left: 40%;
+	flex-grow: 1;
+}
+
+.nav-bio {
+	flex-grow: 1
 }
 
 .nav-resume {
+	flex-grow: 1;
 	margin-right: 10%;
 }
-
 
 
 /*GENERAL TEXT*/
@@ -223,6 +230,55 @@ img {
 	max-width: 100%;
 
 }
+
+
+section {
+	padding-top: 10rem;
+	padding-bottom: 10rem;
+}
+
+.two,
+.four,
+.six,
+.eight,
+.ten,
+.twelve {
+	background-color: #A6E6FC;
+}
+
+.no-background {
+	margin: 0 11%;
+}
+
+
+/*Button Sizes*/
+
+#button {
+	background-color: #B30000;
+	border-color: #B30000;
+	border-radius: 4rem;
+	box-shadow: .5rem .5rem .5rem #777777;
+	color: white;
+	font-family: 'Zilla Slab', serif;
+	font-size: 1.8rem;
+	font-style: normal;
+	font-weight: 600;
+	height: 4.4rem;
+	line-height: 2.6rem;
+	margin-top: 3.5rem;
+	text-align: center;
+	text-transform: uppercase;
+	width: 26.6rem;
+}
+
+
+.contact-info {
+	background-color: #B30000;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	text-align: center;
+}
+
 
 
 /*Landing Page*/
@@ -291,11 +347,6 @@ img {
 /*Landing Page Project Sections*/
 
 
-section {
-	padding-top: 10em;
-	padding-bottom: 10rem;
-}
-
 .recent-work {
 	text-align: center;
 	color: #0E0B06;
@@ -324,18 +375,6 @@ section {
 	box-shadow: 0 0 2rem #777777;
 }
 
-.two,
-.four,
-.six,
-.eight,
-.ten,
-.twelve {
-	background-color: #A6E6FC;
-}
-
-.no-background {
-	margin: 0 11%;
-}
 
 .background {
 	margin: 0 11%;
@@ -451,7 +490,6 @@ section {
 }
 
 
-
 .charts {
 	width: 75%;
 }
@@ -510,45 +548,60 @@ section {
 /*BIOGRAPHY */
 
 .bio-flex {
-	display: grid;
-}
-
-.why-design {
-	margin-left: 50%
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 .icon-text-designer {
 	display: flex;
+	margin-bottom: 2rem;
 }
 
-
-.text-center {
-	margin-left: 13%
-}
-
-.designer {
-	margin-right: 4%;
-
+.why-design {
+	margin-left: 50%;
 }
 
 .designer {
-	margin-left: 4%
+	padding-left: 2.5%;
+	padding-right: 3%
 }
 
+.icon-plus-text {
+	display: flex;
+	margin-bottom: 2rem;
+}
+
+
+/*ICONS*/
 .storyboard {
-	margin-left: 4%;
+	padding: 0 1%;
+	;
 }
 
 .frustrated {
-	margin-left: 4%
+	padding-left: 1%;
 }
 
 .chaplin {
-	margin-left: 4%
+	padding-left: 1%
 }
+
 
 .icon-text {
 	display: flex;
+
+}
+
+.icon-and-text {
+	display: flex;
+}
+
+
+
+.text-icon {
+	display: flex;
+
 }
 
 .background {
@@ -562,10 +615,13 @@ section {
 	font-style: normal;
 	font-weight: 500;
 	line-height: 4.3px;
-	margin-bottom: 4.8rem;
+	margin-bottom: 3rem;
 }
 
-
+.text-middle {
+	margin-left: 11%;
+	margin-bottom: 2rem;
+}
 
 .school {
 	display: grid;
@@ -573,14 +629,14 @@ section {
 	justify-content: space-between;
 	margin-left: 40%;
 	margin-right: 32%;
+	margin-bottom: 2rem;
 }
-
 
 .golf-group {
 	display: block;
 	margin: auto;
+	margin-bottom: 2rem;
 }
-
 
 .bio-question-red {
 	color: #B30000;
@@ -609,7 +665,7 @@ section {
 	font-style: normal;
 	font-weight: 600;
 	line-height: 43px;
-	margin: 0 5%;
+	margin: 0 4%;
 }
 
 .bio-italics {
@@ -620,42 +676,15 @@ section {
 	line-height: 4.3rem;
 }
 
-.icon-text {}
+.icon-text {
+	display: flex;
+	margin-bottom: 2rem;
+}
 
 .privacy {
-	height: 8rem;
-	margin-left: 4%
+	height: 100%;
+	padding: 0 3.2%;
 }
-
-/*Button Sizes*/
-
-#button {
-	background-color: #B30000;
-	border-color: #B30000;
-	border-radius: 4rem;
-	box-shadow: .5rem .5rem .5rem #777777;
-	color: white;
-	font-family: 'Zilla Slab', serif;
-	font-size: 1.8rem;
-	font-style: normal;
-	font-weight: 600;
-	height: 4.4rem;
-	line-height: 2.6rem;
-	margin-top: 3.5rem;
-	text-align: center;
-	text-transform: uppercase;
-	width: 26.6rem;
-}
-
-
-.contact-info {
-	background-color: #B30000;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	text-align: center;
-}
-
-
 
 
 /*MEDIA QUERIES*/
